Implemented UI view template for shopping request details & edit